[package]
name = "rlist"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
postcard = "1.1.3"
reqwest = { version = "0.13.2", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
