[package]
name = "rlist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.5"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.31"
hex = "0.4.3"
http-body = "1"
http-body-util = { version = "0.1.3", features = ["full"] }
paste = "1.0.15"
postcard = "1.1.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "auth", "trace", "fs", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
