[package]
name = "rlist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
bytes = "1.5"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
hex = "0.4.3"
http-body = "1"
http-body-util = { version = "0.1.3", features = ["full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
toml = "1.1.0"
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.6", features = ["auth", "trace", "fs", "timeout", "cors", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
